syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "message_type.proto";

package snake.proto;

message MessageBase
{
	int32 major_version = 1;
	int32 minor_version = 2;
	google.protobuf.Timestamp last_update = 3;
}

message MessageVersion
{
	MessageBase base = 1;
	int32 minimal_major_version = 2;
	int32 minimal_minor_version = 3;
}

message TestMessage
{
	MessageBase base = 1;
	repeated MessageVersion group = 2;
	MessageVersion msg  = 3;
	repeated MessageType types = 4;
	repeated string strings = 5;
	repeated int32 integers = 6;
	repeated google.protobuf.Timestamp stamps = 7;
	map<string, MessageVersion> version_map = 8;
	map<int32, google.protobuf.Timestamp> time_map = 9;
}

message ControlMessage
{
	MessageBase base = 1;
	string target_name = 2;
	string sender_name = 3;
}

message DataMessage
{
	MessageBase base = 1;
	google.protobuf.Timestamp updated_time = 2;
}

message RequestMessage
{
	ControlMessage base = 1;
}

message ResponseMessage
{
	ControlMessage base = 1;
	bool successful = 2;
	bool exception = 3;
	string return_message = 4;
}
