syntax = "proto3";

import "google/protobuf/timestamp.proto";

package snake.message.proto;

enum MessageType
{
	UNKNOWN = 0;
	MESSAGE_VERSION = 1;
	CONTROL_MESSAGE = 2;
	DATA_MESSAGE = 3;
}

message MessageBase
{
	int32 major_version = 1;
	int32 minor_version = 2;
	google.protobuf.Timestamp created_time = 3;
}

message MessageVersion
{
	MessageBase base = 1;
	int32 min_major_version = 2;
	int32 min_minor_version = 3;
}

message ControlMessage
{
	MessageBase base = 1;
	string target_name = 2;
	string sender_name = 3;
}

message DataMessage
{
	MessageBase base = 1;
	google.protobuf.Timestamp updated_time = 2;
}

message RequestMessage
{
	ControlMessage base = 1;
}

message ResponseMessage
{
	ControlMessage base = 1;
	bool successful = 2;
	bool exception = 3;
	string return_message = 4;
}
